Add CSS file and modify html

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-</style>
+  <title>help-Q</title>
+    <link rel="stylesheet" type="text/css" href="project2.css" />
+  <style>
+  </style>
 </head>
 <body>
+  <div id="container">
+    <div id="header">
+      <h1>help-Q</h1>
+    </div>
 
-<table style="width:0%">
-  <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
-    <th>Waiting Time</th>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>Drew</td>
-    <td>McMullen</td>
-    <td> 30 min</td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-</table>
+    <div id="content">
+      <div id="queue">
+        <h3>Queue</h3>
+
+      </div>
+
+      <div id="main">
+        <h2>Being Helped</h2>
+
+
+      </div>
+
+      <div id="footer">
+    Copyright &copy; 2015 Andrew McMullen.
+  </div>
+
+    </div>
+  </div>
+
 
 </body>
 </html>
