ADD divs and CSS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
       </div>
 
       <div id="main">
-        <h2>Being Helped</h2>
+        <h3>Being Helped</h3>
+
+          <div id="instructor1">
+            <h5>Instructor</h5>
+          </div>
+
+          <div id="instructor2">
+            <h5>Instructor</h5>
+          </div>
+
+          <div id="instructor3">
+            <h5>Instructor</h5>
+          </div>
+
+          <div id="instructor4">
+            <h5>Instructor</h5>
+          </div>
 
 
       </div>
