--- a/index.html
+++ b/index.html
@@ -2,11 +2,87 @@
 <html>
 <head>
   <title>help-Q</title>
-    <link rel="stylesheet" type="text/css" href="project2.css" />
+  <link rel="stylesheet" type="text/css" href="project2.css" />
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="project2.js" type="text/javascript" charset="utf-8" async defer></script>
+  <script src="AJAX.js" type="text/javascript" charset="utf-8" async defer></script>
   <style>
   </style>
 </head>
 <body>
+
+<div class="form">
+
+          <ul class="tab-group">
+            <li class="tab active"><a href="#signup">Sign Up</a></li>
+            <li class="tab"><a class='btn-login' href="#">Log In</a></li>
+          </ul>
+
+          <div class="tab-content">
+            <div id="signup">
+              <h1>Sign Up Here!</h1>
+
+              <form action="http://localhost:3000/register" method="post">
+
+                <div class="top-row">
+                  <div class="field-wrap">
+                    <input type="text" required autocomplete="off" placeholder = "First Name">
+                  </div>
+
+                  <div class="field-wrap">
+
+                    <input type="text"required autocomplete="off" placeholder = "Last Name">
+                  </div>
+                </div>
+
+                <div class="field-wrap">
+                  <input name="email" type="email"required autocomplete="off" placeholder = "Email Address">
+                </div>
+
+                <div class="field-wrap">
+                  <input name="password" type="password"required autocomplete="off" placeholder = "Create A Password">
+                </div>
+
+                 <div class="field-wrap">
+                  <input name="password_confirmation" type="password"required autocomplete="off" placeholder = "Confirm Password">
+                </div>
+
+                <button type="submit" class="button button-block button-register"/>Get Started</button>
+
+              </form>
+
+            </div>
+
+            <div id="login">
+              <h1>Welcome Back!</h1>
+
+              <form action="http://localhost:3000/login" method="post">
+
+                <div class="field-wrap">
+
+                  <input type="email"required autocomplete="off" placeholder = "E-mail">
+                </div>
+
+                <div class="field-wrap">
+
+                  <input type="password"required autocomplete="off" placeholder = "Password">
+                </div>
+
+                <p class="forgot"><a href="#">Forgot Password?</a></p>
+
+                <button class="button button-block"/>Log In</button>
+
+              </form>
+
+            </div>
+
+          </div><!-- tab-content -->
+
+        </div> <!-- /form -->
+
+
+
+
   <div id="container">
     <div id="header">
       <h1>help-Q</h1>
@@ -15,34 +91,46 @@
     <div id="content">
       <div id="queue">
         <h3>Queue</h3>
+        <table style="width:100%">
+          <tr>
+            <td>First name</td>
+            <td>Last name</td>
+            <td>Waiting time</td>
+          </tr>
+        </table>
 
-      </div>
+</div>
+
+
 
       <div id="main">
         <h3>Being Helped</h3>
 
-          <div id="instructor1">
-            <h5>Instructor</h5>
-          </div>
+        <div id="instructor1">
+          <h5>Instructor 1</h5>
+        </div>
 
-          <div id="instructor2">
-            <h5>Instructor</h5>
-          </div>
+        <div id="instructor2">
+          <h5>Instructor 2</h5>
+        </div>
 
-          <div id="instructor3">
-            <h5>Instructor</h5>
-          </div>
+        <div id="instructor3">
+          <h5>Instructor 3</h5>
+        </div>
 
-          <div id="instructor4">
-            <h5>Instructor</h5>
-          </div>
+        <div id="instructor4">
+          <h5>Instructor 4</h5>
+        </div>
 
+        <div id="instructor5">
+          <h5>Instructor 5</h5>
+        </div>
 
-      </div>
+     </div>
 
       <div id="footer">
-    Copyright &copy; 2015 Andrew McMullen.
-  </div>
+        Copyright &copy; 2015 Andrew McMullen.
+      </div>
 
     </div>
   </div>
