--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="signup">
               <h1>Sign Up Here!</h1>
 
-              <form action="http://localhost:3000/register" method="post">
+              <form action="" id="signup-form">
 
                 <div class="top-row">
                   <div class="field-wrap">
@@ -56,16 +56,16 @@
             <div id="login">
               <h1>Welcome Back!</h1>
 
-              <form action="http://localhost:3000/login" method="post">
+              <form id="login-form">
 
                 <div class="field-wrap">
 
-                  <input type="email"required autocomplete="off" placeholder = "E-mail">
+                  <input name="email" type="email"required autocomplete="off" placeholder = "E-mail">
                 </div>
 
                 <div class="field-wrap">
 
-                  <input type="password"required autocomplete="off" placeholder = "Password">
+                  <input name="password" type="password"required autocomplete="off" placeholder = "Password">
                 </div>
 
                 <p class="forgot"><a href="#">Forgot Password?</a></p>
@@ -95,9 +95,12 @@
           <tr>
             <td>First name</td>
             <td>Last name</td>
-            <td>Waiting time</td>
+            <td>Need Help With</td>
           </tr>
         </table>
+
+        <div class= "place-buttons"><button type="button" class="qbtnadd"/>+ to Queue</button>
+                <button type="button" class="qbtnremove"/>- from Queue</button></div>
 
 </div>
 
