Debugged AJAX and modified HTML table

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
                 <div class="top-row">
                   <div class="field-wrap">
-                    <input type="text" required autocomplete="off" placeholder = "First Name">
+                    <input id="first_name" type="text" required autocomplete="off" placeholder = "First Name">
                   </div>
 
                   <div class="field-wrap">
 
-                    <input type="text"required autocomplete="off" placeholder = "Last Name">
+                    <input id="last_name" type="text"required autocomplete="off" placeholder = "Last Name">
                   </div>
                 </div>
 
@@ -91,11 +91,19 @@
     <div id="content">
       <div id="queue">
         <h3>Queue</h3>
-        <table style="width:100%">
+        <table id="qtable" style="width:100%">
+
           <tr>
             <td>First name</td>
             <td>Last name</td>
             <td>Need Help With</td>
+          </tr>
+
+          <tr>
+            <td>js</td>
+            <td>meng</td>
+            <td>tom</td>
+
           </tr>
         </table>
 
