ADD jpgs and created add-queue button function

--- a/index.html
+++ b/index.html
@@ -118,23 +118,23 @@
         <h3>Being Helped</h3>
 
         <div id="instructor1">
-          <h5>Instructor 1</h5>
+          <h5>TOM</h5>
         </div>
 
         <div id="instructor2">
-          <h5>Instructor 2</h5>
+          <h5>ANTONY</h5>
         </div>
 
         <div id="instructor3">
-          <h5>Instructor 3</h5>
+          <h5>JEFF</h5>
         </div>
 
         <div id="instructor4">
-          <h5>Instructor 4</h5>
+          <h5>SAAD</h5>
         </div>
 
         <div id="instructor5">
-          <h5>Instructor 5</h5>
+          <h5>MATT</h5>
         </div>
 
      </div>
