--- a/index.html
+++ b/index.html
@@ -113,24 +113,25 @@
         <h3>Being Helped</h3>
 
         <div id="instructor1">
-          <h5>TOM</h5>
+          <h5></h5>
         </div>
 
         <div id="instructor2">
-          <h5>ANTONY</h5>
+          <h5></h5>
         </div>
 
         <div id="instructor3">
-          <h5>JEFF</h5>
+          <h5></h5>
         </div>
 
         <div id="instructor4">
-          <h5>SAAD</h5>
+          <h5></h5>
         </div>
 
         <div id="instructor5">
-          <h5>MATT</h5>
+
         </div>
+        <div><button type="button" class="qbtnext" >NEXT</button></div>
 
      </div>
 
