created new divs for active help items

--- a/index.html
+++ b/index.html
@@ -152,23 +152,34 @@
 
         <h3>Being Helped</h3>
 
-        <div id="instructor1">
-          <h5></h5>
+        <div>
+        <span id="in1"></span>
+          <ul id="tom">
+          </ul>
         </div>
 
-        <div id="instructor2">
-          <h5></h5>
+        <div>
+          <span id='in2'></span>
+          <ul id="antony">
+          </ul>
         </div>
 
-        <div id="instructor3">
-          <h5></h5>
+        <div>
+        <span id='in3'></span>
+          <ul id="jeff">
+          </ul>
         </div>
 
-        <div id="instructor4">
-          <h5></h5>
+        <div>
+        <span id='in4'></span>
+          <ul id="saad">
+          </ul>
         </div>
 
-        <div id="instructor5">
+        <div>
+        <span id='in5'></span>
+          <ul id="matt">
+          </ul>
         </div>
 
         <div>
