CREATED next button by instructor name. CREATED handler to handle student queue to move student to help queue. No backend manipulation

--- a/index.html
+++ b/index.html
@@ -152,41 +152,16 @@
 
         <h3>Being Helped</h3>
 
-        <div>
-        <span id="in1"></span>
-          <ul id="tom">
-          </ul>
-        </div>
+        <table id="htable" style="width:100%">
+          <tr><td id="in1"></td><td id="tom"></td></tr>
+          <tr><td id="in2"></td><td id="antony"></td></tr>
+          <tr><td id="in3"></td><td id="jeff"></td></tr>
+          <tr><td id="in4"></td><td id="saad"></td></tr>
+          <tr><td id="in5"></td><td id="matt"></td></tr>
+        </table>
 
-        <div>
-          <span id='in2'></span>
-          <ul id="antony">
-          </ul>
-        </div>
+        <button type="button" class="qbtnext"/>Next</button>
 
-        <div>
-        <span id='in3'></span>
-          <ul id="jeff">
-          </ul>
-        </div>
-
-        <div>
-        <span id='in4'></span>
-          <ul id="saad">
-          </ul>
-        </div>
-
-        <div>
-        <span id='in5'></span>
-          <ul id="matt">
-          </ul>
-        </div>
-
-        <div>
-          <button type="button" class="qbtnext" id="next">NEXT</button>
-        </div>
-
-      </div>
       <!-- end being helped section -->
 
 
